--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="./about.html">About Us</a></li>     
-                <li><a href="./menu.html">Food Menu</a></li>
+                <li><a href="./menu.html">RESTAURANT Menu</a></li>
                 <li><a href="./order.html">Order Now</a></li>
             </ul>
         </nav>
@@ -27,7 +27,7 @@
     <footer>
         <img src="./images /del.png" alt="del.symbol" style="float:left">
         <p>Free delivery within 30min </p>
-        <p style="text-align:center;">&copy; copyRights 2022</p>
+        <p style="text-align:center;">&copy; BE HEALTHY 2022</p>
     </footer>
 </body>
 </html>
