--- a/order.html
+++ b/order.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="./index.html">Home</a></li>   
                 <li><a href="./about.html">About Us</a></li>     
-                <li><a href="./menu.html">Food Menu</a></li>
+                <li><a href="./menu.html">RESTAURANT Menu</a></li>
                 <li><a href="./order.html">Order Now</a></li>
             </ul>
         </nav>
@@ -29,7 +29,7 @@
 
     </main>
     <footer>
-        <p style="text-align:center;">&copy; copyRights 2022</p>
+        <p style="text-align:center;">&copy; BE HEALTHY 2022</p>
     </footer>
 </body>
 </html>
