--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="./index.html">Home</a></li>   
                 <li><a href="./about.html">About Us</a></li>     
-                <li><a href="./menu.html">RESTAURANT Menu</a></li>
+                <li><a href="./menu.html">Restaurant Menu</a></li>
                 <li><a href="./order.html">Order Now</a></li>
             </ul>
         </nav>
