--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="./about.html">About Us</a></li>     
-                <li><a href="./menu.html">RESTAURANT Menu</a></li>
+                <li><a href="./menu.html">Restaurant Menu</a></li>
                 <li><a href="./order.html">Order Now</a></li>
             </ul>
         </nav>
