--- a/menu.html
+++ b/menu.html
@@ -5,43 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Macondo&display=swap" rel="stylesheet">
 </head>
-<body>
-    <body style="background-color:LightGray;"></body>
+<body class="body-sty">
     <header>
-        <img src="./images /logo.png" alt="logo" style="float:left">
-        <nav>
-            <ul>
-                <li><a href="./index.html">Home</a></li>   
-                <li><a href="./about.html">About Us</a></li>     
-                <li><a href="./menu.html">Restaurant Menu</a></li>
-                <li><a href="./order.html">Order Now</a></li>
-            </ul>
-        </nav>
+        <img src="./images /logo.png" alt="logo" class="img-sty">
+        <form method="get" action="index.html">
+            <button type="submit" class="button-sty">Home</button>
+            </form>
+        <form method="get" action="about.html">
+            <button type="submit" class="button-sty">About Us</button>
+            </form>
+        <form method="get" action="menu.html">
+            <button type="submit" class="button-sty">Restaurant Menu</button>
+            </form>
+        <form method="get" action="order.html">
+            <button type="submit" class="last-button">Order Now</button>
+            </form>
     </header>
     <main>
         
-        <p style="font-size:200%;text-align:center;">MAIN DISHES:</p>
-            <nav>
+        <span class="menu">MAIN DISHES:
                 <ul>
-                    <li>Chicken Biryaneh</li>   
-                    <li>Chicken Mandi</li>   
-                    <li>Chicken Kabsa</li>   
-                    <li>Chicken Freekeh</li>   
-                    <li>Chicken Mushroom</li>   
-                    <li>Sayadiyeh</li>   
-                    <li>Grilled fish Mustard</li>  
-                    <li>Grilled fish Mexican</li>  
-                    <li>Grilled Salmon</li>  
-                    <li>Beef Kabab</li>  
-                    <li>Kufta Tehenia</li>  
-                    <li>Kufta Tomato</li>  
-                    <li>Beef Oyster</li>  
-                    <li>Beef Teryaki</li> 
+                    <li class="list">Chicken Biryaneh</li>   
+                    <li class="list">Chicken Mandi</li>   
+                    <li class="list">Chicken Kabsa</li>   
+                    <li class="list">Chicken Freekeh</li>   
+                    <li class="list">Chicken Mushroom</li>   
+                    <li class="list">Sayadiyeh</li>   
+                    <li class="list">Grilled fish Mustard</li>  
+                    <li class="list">Grilled fish Mexican</li>  
+                    <li class="list">Grilled Salmon</li>  
+                    <li class="list">Beef Kabab</li>  
+                    <li class="list">Kufta Tehenia</li>  
+                    <li class="list">Kufta Tomato</li>  
+                    <li class="list">Beef Oyster</li>  
+                    <li class="list">Beef Teryaki</li> 
                 </ul>
-            </nav>
-            <img src="./images /2.jpg" alt="main dishes">
-        
+            <img src="./images /2.jpg" alt="main dishes" class="menu-img">
+            </span>
         <p style="font-size:200%;text-align:center;">SOUP:</p>
             <nav>
                 <ul>
