--- a/index.html
+++ b/index.html
@@ -5,29 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BE HEALTHY</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Macondo&display=swap" rel="stylesheet">
 </head>
-<body>
-    <body style="background-color:LightGray;"></body>
+<body class="body-sty">
+    
     <header>
-       
-        <nav>
-            <ul>
-                <li><a href="./about.html">About Us</a></li>     
-                <li><a href="./menu.html">Restaurant Menu</a></li>
-                <li><a href="./order.html">Order Now</a></li>
-            </ul>
-        </nav>
+        <img src="./images /logo.png" alt="logo" class="img-sty">
+        <form method="get" action="index.html">
+            <button type="submit" class="button-sty">Home</button>
+            </form>
+        <form method="get" action="about.html">
+            <button type="submit" class="button-sty">About Us</button>
+            </form>
+        <form method="get" action="menu.html">
+            <button type="submit" class="button-sty">Restaurant Menu</button>
+            </form>
+        <form method="get" action="order.html">
+            <button type="submit" class="last-button">Order Now</button>
+            </form>
     </header>
     <main>
-        <p style="font-size:300%;">BE HEALTHY RESTAURANT</p>
-        <p style="font-size:160%;">We welcome your appetite. Let our food satisfy your stomach.
+        <span class="big-letter">B</span>
+        <p class="paragraph-sty">E HEALTHY RESTAURANT</p>
+        <p class="ph1">We welcome your appetite. Let our food satisfy your stomach.
         </p>
-        <img src="./images /logo.png" alt="logo">
+        <img src="./images /logo.png" alt="photo" class="photo">
+
     </main>
     <footer>
-        <img src="./images /del.png" alt="del.symbol" style="float:left">
-        <p>Free delivery within 30min </p>
-        <p style="text-align:center;">&copy; BE HEALTHY 2022</p>
+        <img src="./images /del.png" alt="del.symbol" class="foot">
+        <p class="foot-pra">Free delivery within 30min </p>
+        <p class="copy-rihtg">&copy; BE HEALTHY 2022</p>
     </footer>
 </body>
 </html>
