--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" href="logo.ico" type="image/icon type">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Macondo&display=swap" rel="stylesheet">
 </head>
@@ -39,7 +40,6 @@
     <footer>
         <img src="./images /del.png" alt="del.symbol" class="foot">
         <p class="foot-pra">Free delivery within 30min </p>
-        <p class="copy-rihtg">&copy; BE HEALTHY 2022</p>
     </footer>
 </body>
 </html>
