--- a/order.html
+++ b/order.html
@@ -7,6 +7,7 @@
     <title>About Us</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="logo.ico" type="image/icon type">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Macondo&display=swap" rel="stylesheet">
